# weaver-hackwestern-12

./: README.md
backend/: database.py  db_mock.json  main.py  pyproject.toml  supabase_creation_script.sql  supabase_mock_data_script.sql
backend/routes/: board.py  board_branches.py  board_edges.py  board_nodes.py  branch.py  edge.py  flow.py  llm.py  node.py  websocket.py
backend/schema/: schemas.py
backend/services/: context_service.py  llm_service.py  websocket_manager.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatNode.jsx  Sidebar.jsx
frontend/src/hooks/: useCollaborativeCursors.js  useWebSocket.js
