[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.121.3",
    "google>=3.0.0",
    "google-genai>=0.2.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "supabase>=2.24.0",
    "uvicorn>=0.38.0",
]
